k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-h
  replicas: 4
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-volume
      spec:
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
